--- a/app/src/main/res/layout/activity_food_intake_tracker.xml
+++ b/app/src/main/res/layout/activity_food_intake_tracker.xml
@@ -59,7 +59,7 @@
         app:srcCompat="@drawable/rectangle_shape" />
 
     <EditText
-        android:id="@+id/etCalorieTaken"
+        android:id="@+id/etCalorieTrackerInput"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
@@ -88,7 +88,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etCalorieTaken" />
+        app:layout_constraintTop_toBottomOf="@+id/etCalorieTrackerInput" />
 
     <TextView
         android:id="@+id/textView5"
@@ -119,7 +119,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/tvCaloriesTaken"
+        android:id="@+id/tvCalorieTrackerTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
@@ -143,7 +143,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tvCaloriesTaken"
+        app:layout_constraintStart_toEndOf="@+id/tvCalorieTrackerTaken"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <ProgressBar
@@ -160,7 +160,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCaloriesTaken" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCalorieTrackerTaken" />
 
     <ImageView
         android:id="@+id/imageView74"
@@ -173,7 +173,7 @@
         app:srcCompat="@drawable/food_icon" />
 
     <TextView
-        android:id="@+id/tvCaloriesPercent"
+        android:id="@+id/tvCalorieTrackerPercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_bold"
@@ -199,7 +199,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
 
     <TextView
-        android:id="@+id/textView149"
+        android:id="@+id/tvCalorieTrackerGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -221,7 +221,7 @@
         android:text="Kcal"
         android:textColor="@color/tertiaryText"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView149"
+        app:layout_constraintStart_toEndOf="@+id/tvCalorieTrackerGoal"
         app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
 
 
