--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView26"
+                android:id="@+id/tvProfileDayMonDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -53,7 +53,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/imProfileSettings"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="120dp"
@@ -70,7 +70,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/back_tabs"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/textView26"
+                app:layout_constraintTop_toBottomOf="@+id/tvProfileDayMonDate"
                 tools:layout_editor_absoluteX="20dp">
 
                 <TextView
