--- a/app/src/main/res/layout/activity_water_intake_tracker.xml
+++ b/app/src/main/res/layout/activity_water_intake_tracker.xml
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/tvWaterTaken"
+        android:id="@+id/tvWaterTrackerTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -158,7 +158,7 @@
         app:srcCompat="@drawable/water_droplet_icon" />
 
     <TextView
-        android:id="@+id/tvWaterPercent"
+        android:id="@+id/tvWaterTrackerPercent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_bold"
@@ -265,7 +265,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
 
     <TextView
-        android:id="@+id/textView146"
+        android:id="@+id/tvWaterTrackerGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
@@ -287,7 +287,7 @@
         android:text="ml"
         android:textColor="@color/tertiaryText"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView146"
+        app:layout_constraintStart_toEndOf="@+id/tvWaterTrackerGoal"
         app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
 
 
