--- a/app/src/main/res/layout/cancel_activity_confirmation.xml
+++ b/app/src/main/res/layout/cancel_activity_confirmation.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView156" />
 
     <Button
-        android:id="@+id/button25"
+        android:id="@+id/btnCancelActYes"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView191" />
 
     <Button
-        android:id="@+id/button26"
+        android:id="@+id/btnCancelActNo"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
