--- a/app/src/main/res/layout/fragment_in_progress_activity.xml
+++ b/app/src/main/res/layout/fragment_in_progress_activity.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView49" />
 
     <TextView
-        android:id="@+id/textView103"
+        android:id="@+id/tvInProgressAct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -49,10 +49,10 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/circle_filled_shape"
         app:layout_constraintStart_toStartOf="@+id/imageView49"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 
     <ImageView
-        android:id="@+id/imageView59"
+        android:id="@+id/imInProgressIcon"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/running_icon"
@@ -71,10 +71,10 @@
         android:textColor="@color/tertiaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView52"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 
     <TextView
-        android:id="@+id/textView107"
+        android:id="@+id/tvInProgressCurrentTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -92,8 +92,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/line_divider"
-        app:layout_constraintStart_toEndOf="@+id/textView107"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintStart_toEndOf="@+id/tvInProgressCurrentTime"
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 
     <TextView
         android:id="@+id/textView111"
@@ -105,7 +105,7 @@
         android:textColor="@color/tertiaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView60"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 
     <TextView
         android:id="@+id/textView112"
@@ -127,10 +127,10 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/line_divider"
         app:layout_constraintStart_toEndOf="@+id/textView112"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 
     <Button
-        android:id="@+id/button16"
+        android:id="@+id/btnInProgressDone"
         android:layout_width="65dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
@@ -140,10 +140,10 @@
         android:textColor="@color/btnText"
         android:textSize="11sp"
         app:layout_constraintStart_toEndOf="@+id/imageView61"
-        app:layout_constraintTop_toBottomOf="@+id/button17" />
+        app:layout_constraintTop_toBottomOf="@+id/btnInProgressCancel" />
 
     <Button
-        android:id="@+id/button17"
+        android:id="@+id/btnInProgressCancel"
         android:layout_width="65dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
@@ -153,5 +153,5 @@
         android:textColor="@color/btnCancelColor"
         android:textSize="11sp"
         app:layout_constraintStart_toEndOf="@+id/imageView61"
-        app:layout_constraintTop_toBottomOf="@+id/textView103" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInProgressAct" />
 </androidx.constraintlayout.widget.ConstraintLayout>
