--- a/app/src/main/res/layout/fragment_profile_set_steps_goal.xml
+++ b/app/src/main/res/layout/fragment_profile_set_steps_goal.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView38" />
 
     <TextView
-        android:id="@+id/textView66"
+        android:id="@+id/tvSetStepDaily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_semi_bold"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView39" />
 
     <TextView
-        android:id="@+id/textView68"
+        android:id="@+id/tvSetStepWeekly"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_semi_bold"
@@ -115,7 +115,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView38" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/etSetStepDaily"
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -140,7 +140,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toEndOf="@+id/editTextText"
+        app:layout_constraintStart_toEndOf="@+id/etSetStepDaily"
         app:layout_constraintTop_toBottomOf="@+id/textView69" />
 
     <TextView
@@ -154,10 +154,10 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/etSetStepDaily" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/etSetStepWeekly"
         android:layout_width="200dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -182,11 +182,11 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.10"
-        app:layout_constraintStart_toEndOf="@+id/editTextText2"
+        app:layout_constraintStart_toEndOf="@+id/etSetStepWeekly"
         app:layout_constraintTop_toBottomOf="@+id/textView71" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btnSetStepGoal"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
@@ -196,10 +196,10 @@
         android:textColor="@color/btnText"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/etSetStepWeekly" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btnSetStepCancel"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
@@ -209,5 +209,5 @@
         android:textColor="@color/btnCancelColor"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSetStepGoal" />
 </androidx.constraintlayout.widget.ConstraintLayout>
