--- a/app/src/main/res/layout/fragment_profile_water.xml
+++ b/app/src/main/res/layout/fragment_profile_water.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
     <TextView
-        android:id="@+id/textView39"
+        android:id="@+id/tvProfileWaterTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -67,8 +67,8 @@
         android:text="ml"
         android:textColor="@color/tertiaryText"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/textView39"
-        app:layout_constraintTop_toTopOf="@+id/textView39" />
+        app:layout_constraintStart_toEndOf="@+id/tvProfileWaterTaken"
+        app:layout_constraintTop_toTopOf="@+id/tvProfileWaterTaken" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
@@ -78,7 +78,7 @@
         android:background="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileWaterTaken" />
 
     <ImageView
         android:id="@+id/imageView25"
@@ -125,7 +125,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnProfileWaterSetGoal"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -150,7 +150,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView26" />
 
     <TextView
-        android:id="@+id/textView43"
+        android:id="@+id/tvProfileWaterDailyGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_semi_bold"
@@ -174,7 +174,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView28" />
 
     <TextView
-        android:id="@+id/textView45"
+        android:id="@+id/tvProfileWaterWeeklyGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_semi_bold"
