--- a/app/src/main/res/layout/sign_out_confirmation.xml
+++ b/app/src/main/res/layout/sign_out_confirmation.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView192" />
 
     <Button
-        android:id="@+id/button27"
+        android:id="@+id/btnSignOutYes"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView193" />
 
     <Button
-        android:id="@+id/button28"
+        android:id="@+id/btnSignOutNo"
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
